--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: rgba(0, 0, 0, 0.940);
+}
+
 .flex {
     max-width: 420px;
     height: 100vh;
