--- a/index.html
+++ b/index.html
@@ -85,12 +85,16 @@ a {
 }
 
 .image1 {
-    background: url(../imagens/facelogo.jpg) no-repeat center;
+    
     background-size: cover;
-    width: 100%;
+    width: 100;
     height: 70px;
     margin-bottom: 35px;
     /*#385899*/
+}
+
+img {
+    width: 90%;
 }
     </style>
 </head>
@@ -98,7 +102,7 @@ a {
     <section class="flex">
         <div class="card">
                 <div class="cxts">
-                    <div class="image1" id="img-logo"></div>
+                    <div class="image1" id="img-logo"><img src="imagens/facelogo.jpg" alt="Facebook"></div>
                     <form>
                         <input type="email" name="email" id="iemail" placeholder="Telefone ou email" required>
                         <input type="password" name="senha" id="isenha" placeholder="Senha" required>
