--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ input {
     padding: 8px;
     margin-top: 12px;
     background-color: transparent;
+    color: #EEE;
+    font-size: 1.1em;
     border: none;
     border-bottom: 2px solid white;
 }
