--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a.btn-x {
 
 .image1 {
     background-size: cover;
-    width: 100;
+    width: 100%;
     height: 70px;
     margin-bottom: 35px;
     /*#385899*/
@@ -98,8 +98,19 @@ img.imglogo {
     width: 90%;
 }
 
+footer {
+    max-width: 420px;
+    height: 15vh;
+    margin: auto;
+    background-color: #385899;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .lg {
-width: 10px;
+    display: block;
+    width: 30px;
 }
     </style>
 </head>
