--- a/telatest.html
+++ b/telatest.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erro Login</title>
+    <title>Test</title>
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
-        body {
-            background-color: rgba(0, 0, 0, 0.940);
-        }
-        
         section {
             max-width: 420px;
             height: 100vh;
@@ -26,27 +22,23 @@
             align-items: center;
         }
 
-        div.e4 {
-            text-align: center;
+        .gradient {
+            background-image: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 230, 0));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         p {
             font: bold 28pt arial;
             color: white;
-            margin-bottom: 14px;
-        }
-
-        a {
-            color: white;
-            text-transform: uppercase;
         }
     </style>
 </head>
 <body>
-    <section class="error">
-        <div class="e4">
-            <p>Erro no login</p>
-            <a href="https://www.facebook.com/">Tente novamente</a>
+    <section>
+        <div>
+            <p class="gradient">Caiu HAHAHAHAHA!</p>
         </div>
     </section>
 </body>
