--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer {
         </div>
     </section>
     <footer>
-        <a href="https://www.youtube.com/watch?v=ZhstyJSNKME&t=749s"><img class="lg" src="imagens/iconeajuda.png.png" alt="Ajuda"></a>
+        <a href="telatest.html"><img class="lg" src="imagens/iconeajuda.png.png" alt="Ajuda"></a>
     </footer>
 </body>
 </html>
