--- a/telatest.html
+++ b/telatest.html
@@ -11,6 +11,10 @@
             padding: 0;
         }
 
+        body {
+             background-color: rgba(0, 0, 0, 0.940);;
+        }
+
         section {
             max-width: 420px;
             height: 100vh;
